--- a/Reservación/Reservación/Reservación.csproj
+++ b/Reservación/Reservación/Reservación.csproj
@@ -46,16 +46,34 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="Reservation.cs" />
+    <Compile Include="Reserva_form.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Reserva_form.Designer.cs">
+      <DependentUpon>Reserva_form.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Log_in_form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Log_in_form.Designer.cs">
+      <DependentUpon>Log_in_form.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="User.cs" />
+    <Compile Include="Validator.cs" />
+    <Compile Include="Voucher_form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Voucher_form.Designer.cs">
+      <DependentUpon>Voucher_form.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="Log_in_form.resx">
+      <DependentUpon>Log_in_form.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reserva_form.resx">
+      <DependentUpon>Reserva_form.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
