--- a/Reservación/Reservación/Reservación.csproj
+++ b/Reservación/Reservación/Reservación.csproj
@@ -61,6 +61,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ucTarjetaAlojamiento.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ucTarjetaAlojamiento.Designer.cs">
+      <DependentUpon>ucTarjetaAlojamiento.cs</DependentUpon>
+    </Compile>
     <Compile Include="User.cs" />
     <Compile Include="Validator.cs" />
     <Compile Include="Voucher_form.cs">
@@ -83,7 +89,11 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="ucTarjetaAlojamiento.resx">
+      <DependentUpon>ucTarjetaAlojamiento.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -96,6 +106,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="source\logo_orange.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
